# identity/credentials.go
@@ -89,7 +89,7 @@ const (
 	CredentialsTypePasskey  CredentialsType = "passkey"
 	CredentialsTypeProfile  CredentialsType = "profile"
 
-	TwoStep CredentialsType = "identity_discovery" // TODO move this somewhere else
+	TwoStep CredentialsType = "two_step" // TODO move this somewhere else
 )
 
 func (c CredentialsType) String() string {
